syntax = "proto3";
//这个不重要主要看go_package，最好写 否则buf可能无法生成 intr.v1 intrv1对应
package intr.v1;
//把代码放在proto/gen目录下  intrv1是别名 生成的包名是intrv1
option go_package = "intr/v1;intrv1";

service InteractiveService{
    rpc IncrReadCnt(IncrReadCntRequest)returns(IncrReadCntResponse);
    rpc Like(LikeRequest)returns(LikeResponse);
    rpc CancelLike(CancelLikeRequest) returns (CancelLikeResponse);
    rpc Collect(CollectRequest) returns(CollectResponse);
    rpc Get(GetRequest)returns(GetResponse);
    rpc GetByIds(GetByIdsRequest)returns (GetByIdsResponse);
}

message IncrReadCntRequest{
  string biz = 1;
  //使用下划线
  int64 biz_id = 2;
}
message IncrReadCntResponse{
  //有些公司有规范  不建议使用
  //Code
  //Msg
  //Data
}

message LikeRequest{
  string biz = 1;

  int64 biz_id = 2;
  int64 uid = 3;
}
message LikeResponse{
}

message CancelLikeRequest{
  string biz = 1;

  int64 biz_id = 2;
  int64 uid = 3;
}
message CancelLikeResponse{
}

message CollectRequest{
  string biz = 1;

  int64 biz_id = 2;
  int64 cid = 3;
  int64 uid = 4;
}
message CollectResponse{
}

message GetRequest{
  string biz = 1;

  int64 biz_id = 2;
  int64 uid = 3;
}
message GetResponse{
  Interactive intr = 1;
}

message Interactive {
  string biz = 1;
  int64 biz_id = 2;

  int64  read_cnt = 3;
  int64 like_cnt = 4;
  int64 collect_cnt = 5;
  bool liked = 6;
  bool collected = 7;
}

message GetByIdsRequest{
  string biz = 1;
  repeated int64 ids = 2;
}
message GetByIdsResponse {
  map<int64,Interactive> intrs = 1;
}